Changes for 1.0beta14:

 - show severity of triggers in the list (Alexei)
 - fixed trigger update. Value of the trigger sets to UNKNOWN. (Alexei)
 - fixed --with-[net|ucd]-snmp to work with various paths (Alexei)
 - changed css.css to follow W3C standard (Alexei)
 - changed DB schema. Dropped foreign key for table actions (Alexei)
 - fixed handling of special chars in adding from templates (Alexei)
 - fixed output of special characters in maps (Alexei)
 - fixed permission check for screens (Alexei)
 - delete sysmap information on host removal (Alexei)
 - fixed compilation of the agent under HP-UX (Alexei)
 - fixed simple checks to return NOTSUPPORTED (Alexei)
 - removed primary keys for both 'history' and 'history_str' (Alexei)
 - added support for system[proccount] under FreeBSD (Alexei)
 - remove trailing zeroes in function evaluation routines (Alexei)
 - added support for proc_cnt[*] under FreeBSD (Alexei)
 - special processing of unit 's' (Alexei)
 - added W32 install floppy. Thanks to  Fabricio Ferrari. (Alexei)
 - new action type: "ON or OFF" (Alexei)
 - added support of macro {STATUS} (Alexei)
 - pinger to work for all hosts (ip and hostname-based) (Alexei)
 - fixed memory[cached] to work for both linux 2.4 and 2.6 (Alexei)
 - do not link crypt and crypto to the agent (Alexei)
 - fixed report1.php to work under FreeBSD (Alexei)
 - fixed displaying of string value in the Latest Values (Alexei)
 - fixed simple check when port specified. Order of IP and PORT is
 arbitrary now (Alexei)
 - fixed pinger to correc calculate number of seconds (Alexei)
 - fixed selection of "Dark Yellow" for graphs and map links (Alexei)
 - fixed removal of trigger dependency (Alexei)
 - added substitution of macros for all actions (Alexei)
 - added escaping of 'special' characters before SQL insert statements (Alexei)
 - fixed removal of sysmaps hosts and links when deleting item (Alexei)
 - fixed Use IP address in host definition form (Alexei)